# esp-flasher-stub

./: .gitignore  Cargo.toml  Makefile_patched.patch  README.md  build.rs  esptool.patch  inactive-rust-toolchain.toml  partitions.csv
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
ld/: esp32_rom.x  esp32_stub.x  esp32c2_rom.x  esp32c2_stub.x  esp32c3_rom.x  esp32c3_stub.x  esp32c6_rom.x  esp32c6_stub.x  esp32h2_rom.x  esp32h2_stub.x  esp32s2_rom.x  esp32s2_stub.x  esp32s3_rom.x  esp32s3_stub.x  rom.x  stub.x
src/: commands.rs  dprint.rs  io.rs  lib.rs  main.rs  miniz_types.rs  protocol.rs  serial_io.rs  targets.rs
src/io/: mod.rs  uart.rs  usb_serial_jtag.rs
xtask/: Cargo.toml
xtask/src/: main.rs
