[package]
name         = "flasher-stub"
version      = "0.2.0"
edition      = "2021"
rust-version = "1.67"
license      = "MIT OR Apache-2.0"
categories   = ["embedded", "no-std"]

[dependencies]
critical-section = "1.1.2"
esp32-hal        = { version = "0.17.0", optional = true }
esp32c2-hal      = { version = "0.12.0", optional = true }
esp32c3-hal      = { version = "0.14.0", optional = true }
esp32c6-hal      = { version = "0.7.0",  optional = true }
esp32h2-hal      = { version = "0.5.0",  optional = true }
esp32s2-hal      = { version = "0.14.0", optional = true }
esp32s3-hal      = { version = "0.14.0", optional = true }
heapless         = { version = "0.8.0",  default-features = false }
static_cell      = "2.0.0"

[dev-dependencies]
assert2        = "0.3.11"
matches        = "0.1.10"
mockall        = "0.12.1"
mockall_double = "0.3.1"

[features]
esp32   = ["esp32-hal"]
esp32c2 = ["esp32c2-hal"]
esp32c3 = ["esp32c3-hal"]
esp32c6 = ["esp32c6-hal"]
esp32h2 = ["esp32h2-hal"]
esp32s2 = ["esp32s2-hal"]
esp32s3 = ["esp32s3-hal"]
dprint  = []

[profile.release]
opt-level     = "z"
codegen-units = 1
lto           = true
panic         = "abort"
debug         = true
