[package]
name         = "flasher-stub"
version      = "0.2.0"
edition      = "2021"
rust-version = "1.76"
license      = "MIT OR Apache-2.0"
categories   = ["embedded", "no-std"]

[dependencies]
critical-section = "1.1.2"
esp-hal = { version = "0.16.0" }
heapless         = { version = "0.8.0",  default-features = false }
static_cell      = "2.0.0"

[dev-dependencies]
assert2        = "0.3.11"
matches        = "0.1.10"
mockall        = "0.12.1"
mockall_double = "0.3.1"

[features]
esp32   = ["esp-hal/esp32"]
esp32c2 = ["esp-hal/esp32c2"]
esp32c3 = ["esp-hal/esp32c3"]
esp32c6 = ["esp-hal/esp32c6"]
esp32h2 = ["esp-hal/esp32h2"]
esp32s2 = ["esp-hal/esp32s2"]
esp32s3 = ["esp-hal/esp32s3"]
dprint  = []

[profile.release]
opt-level     = "z"
codegen-units = 1
lto           = true
panic         = "abort"
debug         = true
