[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow         = "1.0.71"
cargo_metadata = "0.15.4"
clap           = { version = "4.3.11", features = ["derive"] }
env_logger     = "0.10.0"
log            = "0.4.19"
serde_json     = "1.0.100"
strum          = { version = "0.25.0", features = ["derive"] }
xmas-elf       = "0.9.0"
