[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow         = "1.0.75"
base64         = "0.21.5"
cargo_metadata = "0.18.1"
clap           = { version = "4.4.11", features = ["derive"] }
env_logger     = "0.10.1"
log            = "0.4.20"
serde          = { version = "1.0.193", features = ["derive"] }
serde_json     = "1.0.108"
strum          = { version = "0.25.0", features = ["derive"] }
toml           = "0.8.8"
xmas-elf       = "0.9.1"
